# parse-config-file

./: CMakeLists.txt  README.md  config.json
include/: JSON_ParserConfigFile.hpp  ParseConfigFile.hpp  ParserConfigFile.hpp
source/: JSON_ParserConfigFile.cpp  main.cpp
